--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ladderhive-fitness</title>
-  <meta name="description" content="Lovable Generated Project" />
+  <title>fit-track-pro</title>
+  <meta name="description" content="TopLine Generated Project" />
   <meta name="author" content="Lovable" />
 
-  <meta property="og:title" content="Lovable Generated Project" />
-  <meta property="og:description" content="Lovable Generated Project" />
+  <meta property="og:title" content="TopLine Generated Project" />
+  <meta property="og:description" content="TopLine Generated Project" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://i.ibb.co/pjCnZMk/fittrack-cover.jpg" />
 
