--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitness App</title>
+    <title>FitTrack Pro v0.1 – Beta</title>
     <meta name="description" content="A comprehensive fitness application for workout planning and tracking">
   </head>
   <body>
