chore: update project configuration and dependencies

--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FitTrack Pro v0.1 – Beta</title>
-    <meta name="description" content="A comprehensive fitness application for workout planning and tracking">
+    <title>LadderHive Fitness</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
